feat: improve knowledge document processing and retry flows